Add Recent Activity and Upcoming Deadlines component

--- a/ChoreBuddies.Frontend/UI/_Imports.razor
+++ b/ChoreBuddies.Frontend/UI/_Imports.razor
@@ -10,3 +10,4 @@
 @using ChoreBuddies.Frontend.UI.Layout
 @using MudBlazor
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using MudBlazor.FontIcons.MaterialSymbols
