--- a/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
+++ b/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
@@ -277,7 +277,7 @@
         flex-direction: row;
         width: 100vw;
         height: 100vh;
-        overflow: hidden;
+        overflow-y: auto;
     }
 
     .fixed {
